--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
                                     </a>
                                 </span>
                                 <span class="link-block">
-                                    <a href=""
+                                    <a href="https://arxiv.org/pdf/2407.01573"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="ai ai-arxiv"></i>
                                         </span>
-                                        <span>arXiv (coming soon)</span>
+                                        <span>arXiv</span>
                                     </a>
                                 </span>
                                 <!-- Video Link. -->
@@ -447,7 +447,15 @@
         <div class="container is-max-desktop content">
             <h2 class="title">BibTeX</h2>
             <pre><code>
-            
+            @misc{pan2024modelbaseddiffusiontrajectoryoptimization,
+                title={Model-Based Diffusion for Trajectory Optimization}, 
+                author={Chaoyi Pan and Zeji Yi and Guanya Shi and Guannan Qu},
+                year={2024},
+                eprint={2407.01573},
+                archivePrefix={arXiv},
+                primaryClass={cs.RO},
+                url={https://arxiv.org/abs/2407.01573}, 
+              }
             </code></pre>
         </div>
     </section>
