--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                             <span class="author-block">Carnegie Mellon University</span>
                         </div>
 
+                        <div class="is-size-5 publication-authors">
+                            <span class="author-block">NeurIPS 2024</span>
+                        </div>
+
                         <div class="column has-text-centered">
                             <div class="publication-links">
                                 <!-- PDF Link. -->
